--- a/frexiai.html
+++ b/frexiai.html
@@ -1,110 +1,156 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>FrexiAI</title>
-
-<style>
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: system-ui, sans-serif;
-  background: #f2f2f2;
+  padding: 0;
 }
-#chat {
-  padding: 12px;
-  height: 80vh;
-  overflow-y: auto;
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background: radial-gradient(circle at top, #1e1b4b, #020617);
+  color: #e5e7eb;
+  line-height: 1.6;
 }
-.msg {
-  padding: 10px;
-  margin: 8px 0;
-  border-radius: 10px;
-  max-width: 80%;
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
-.user {
-  background: #007aff;
-  color: #fff;
-  margin-left: auto;
+
+.container {
+  width: 90%;
+  max-width: 1100px;
+  margin: auto;
 }
-.ai {
-  background: #e0e0e0;
+
+/* NAVBAR */
+.navbar {
+  padding: 20px 0;
+  background: rgba(2, 6, 23, 0.9);
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
-#input {
-  position: fixed;
-  bottom: 0;
+
+.navbar .container {
   display: flex;
-  width: 100%;
-  background: #fff;
-  padding: 10px;
-}
-input {
-  flex: 1;
-  font-size: 16px;
-  padding: 8px;
-}
-button {
-  font-size: 18px;
-  margin-left: 5px;
-}
-</style>
-</head>
-
-<body>
-
-<div id="chat">
-  <div class="msg ai">Paste text or talk. I’ll clean it up.</div>
-</div>
-
-<div id="input">
-  <button id="mic">🎤</button>
-  <input id="text" placeholder="Type or speak your chaos…" />
-  <button id="send">➤</button>
-</div>
-
-<script>
-const chat = document.getElementById("chat");
-const input = document.getElementById("text");
-
-function add(text, who) {
-  const div = document.createElement("div");
-  div.className = "msg " + who;
-  div.innerText = text;
-  chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
+  justify-content: space-between;
+  align-items: center;
 }
 
-document.getElementById("send").onclick = () => {
-  if (!input.value) return;
-  const text = input.value;
-  add(text, "user");
-  input.value = "";
-
-  setTimeout(() => {
-    add(
-`Summary:
-This needs attention.
-
-Actions:
-- Read
-- Decide
-- Reply
-
-Clear version:
-${text}`, 
-    "ai");
-  }, 500);
-};
-
-// Voice input
-const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-if (SpeechRecognition) {
-  const rec = new SpeechRecognition();
-  rec.lang = "en-GB";
-  document.getElementById("mic").onclick = () => rec.start();
-  rec.onresult = e => input.value = e.results[0][0].transcript;
+.logo {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #a5b4fc;
 }
-</script>
 
-</body>
-</html>
+nav a {
+  margin-left: 20px;
+}
+
+.btn-small {
+  padding: 8px 14px;
+  background: #6366f1;
+  border-radius: 6px;
+}
+
+/* HERO */
+.hero {
+  padding: 120px 0;
+  text-align: center;
+}
+
+.hero h1 {
+  font-size: 2.6rem;
+  margin-bottom: 20px;
+}
+
+.hero p {
+  max-width: 650px;
+  margin: auto;
+  color: #c7d2fe;
+}
+
+.btn-primary {
+  display: inline-block;
+  margin-top: 30px;
+  padding: 14px 30px;
+  background: linear-gradient(135deg, #6366f1, #22d3ee);
+  color: #020617;
+  font-weight: bold;
+  border-radius: 8px;
+}
+
+/* FEATURES */
+.features {
+  padding: 80px 0;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 25px;
+}
+
+.card {
+  background: rgba(30, 27, 75, 0.6);
+  padding: 25px;
+  border-radius: 12px;
+  border: 1px solid rgba(99, 102, 241, 0.2);
+}
+
+/* PRICING */
+.pricing {
+  padding: 80px 0;
+  text-align: center;
+}
+
+.pricing h2 {
+  margin-bottom: 40px;
+}
+
+.pricing-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 25px;
+}
+
+.price-card {
+  background: rgba(2, 6, 23, 0.9);
+  padding: 30px;
+  border-radius: 14px;
+  border: 1px solid rgba(99, 102, 241, 0.25);
+}
+
+.price-card.featured {
+  border: 2px solid #22d3ee;
+}
+
+.price {
+  font-size: 1.8rem;
+  margin: 15px 0;
+  color: #a5b4fc;
+}
+
+.price-card ul {
+  list-style: none;
+}
+
+.price-card li {
+  margin: 10px 0;
+}
+
+/* DISCORD */
+.discord {
+  padding: 80px 0;
+  text-align: center;
+  background: rgba(30, 27, 75, 0.6);
+}
+
+/* FOOTER */
+footer {
+  padding: 30px 0;
+  text-align: center;
+  background: #020617;
+  font-size: 0.9rem;
+  color: #9ca3af;
+}
